Make the api_key variable more specific
"api_key" is a little bit too generic imho and could be the api
key for any service, not just dataloop.

This patch changes the varname to dataloop_api_key meaning that it
can be overridden at will without worrying about affecting other
roles that could contain this same variable name.

--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -3,7 +3,7 @@
   sudo: true
   vars:
     sys_packages: ["vim", "git"]
-    api_key: redacted
+    dataloop_api_key: redacted
   roles:
     - init
     - dataloop-agent
