fix up minor typos

--- a/tasks/debian.yml
+++ b/tasks/debian.yml
@@ -7,7 +7,7 @@
 #  apt_key: url= state=present
 
 - name: Add dataloop apt repository
-  apt_repository: repo='deb https://download.dataloop.io/packages/stable/deb x86_64' state=present
+  apt_repository: repo='deb https://download.dataloop.io/packages/stable/deb x86_64/' state=present
 
 - name: Install dataloop
-  apt: name=dataloop-agent state=present
+  apt: name=dataloop-agent state=present force=yes
