--- a/roles/dataloop-agent/tasks/main.yml
+++ b/roles/dataloop-agent/tasks/main.yml
@@ -9,5 +9,5 @@
   when: ansible_distribution == 'CentOS' or ansible_distribution == 'Red Hat Enterprise Linux'
 
 - name: Create the config file
-  template: src=dataloop-agent.yaml.j2 dest=/etc/dataloop/agent.yaml owner=dataloop group=dataloop mode=600
+  template: src=dataloop-agent.yaml.j2 dest=/etc/dataloop/agent.yaml owner=root group=dataloop mode=640
   notify: restart dataloop-agent
