--- a/roles/dataloop-agent/tasks/main.yml
+++ b/roles/dataloop-agent/tasks/main.yml
@@ -6,7 +6,7 @@
   when: ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu'
 
 - include: rhel.yml
-  when: ansible_distribution == 'CentOS' or ansible_distribution == 'Red Hat Enterprise Linux'
+  when: ansible_distribution != 'Debian' and ansible_distribution != 'Ubuntu'
 
 - name: Create the config file
   template: src=dataloop-agent.yaml.j2 dest=/etc/dataloop/agent.yaml owner=root group=dataloop mode=640
